# genetk

./: README.md  pyproject.toml
ci/scripts/: annotate.sh  gene_analysis.sh  geneset.sh
src/genetk/: __init__.py
src/genetk/enrich/: __init__.py  annotate.py  go.py  go_enrichment.py  gsea_py.py
src/genetk/network/: __init__.py  go_network.py  network.py
src/genetk/prepmagma/: __init__.py  mk_geneset.py
test/: GO_Biological_Process_2023.human.enrichr.reports.txt  gsea_results_example.py  test_community_community.tsv  test_go_network.py
