[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genetk"
version = "0.1.1"
authors = [
    { name = "brainfo", email = "scilavisher@gmail.com" },
]
description = "A toolkit for genetic analysis"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gseapy>=1.0.0",
    "networkx>=3.0",
    "pandas>=1.0.0",
    "numpy>=1.20.0",
    "mygene>=3.2.2",
    "seaborn>=0.13.2",
    "matplotlib>=3.7.5",
    "pip>=25.0.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/genetk"
"Bug Tracker" = "https://github.com/yourusername/genetk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/genetk"] 
